# Morgul

./: .clang-format  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  pyproject.toml  run_capture.sh  run_sink.sh
cmake/Modules/: EnsureSubmodule.cmake
contrib/: compare_geo.py  dump_jungfrau_h5.py  merge_pedestal_dump.py  morgul-sink.py  process_offline.py  read_h5.py  stream_capture.py  zmq_sink.py
cuda/: array2d.hpp  calibration.cxx  calibration.hpp  commands.hpp  common.hpp  constants.hpp  correct.cxx  cuda_argparse.hpp  cuda_common.hpp  hdf5_tools.cxx  hdf5_tools.hpp  kernels.cu  kernels.h  live.cxx  main.cxx  pedestal.cxx
morgul/: config.py  morgul.ini  morgul_correct.py  morgul_mask.py  morgul_merge.py  morgul_nxmx.py  morgul_pedestal.py  util.py  view.py
morgul/watcher/: morgul_watch.py
tests/: test_hdf5.cxx
