[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "morgul"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
license = "BSD-3-Clause"
authors = [
    { name = "Nicholas Devenish", email = "ndevenish@gmail.com" },
    { name = "Graeme Winter", email = "graeme.winter@gmail.com" },
]

dependencies = [
    "numpy~=2.1.1",
    "h5py>=3.12.0",
    "tqdm~=4.66.5",
    "hdf5plugin>=5.0.0",
    "python-dateutil~=2.9.0",
    "pint~=0.24.3",
    "pydantic~=2.8.2",
    "rich~=13.8.0",
    "watchdir~=1.0.0",
    "typer>=0.15.3",
    "click<8.2.0",
]
[project.optional-dependencies]
all = ["napari"]
view = ["napari"]

[project.scripts]
morgul = "morgul.morgul:main"

# packages = [{ include = "morgul" }]
# include = ["morgul/morgul.ini"]

[tool.ruff.lint]
# E712: Replaces (x == False) with (x is False). Deadly for numpy arrays.
ignore = ["E501", "E741", "E712"]
select = ["E", "F", "W", "I"]
unfixable = ["F841"]
